--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1>Hello world</h1>
-      <p>It`s me</p>
-      <i class="fab fa-instagram"></i>
+    <div class="hero">
+      <p>Hi I am</p>
+      <h1>Mariia Yaroshenko</h1>
+      <h2 class="mb-5">Front-end developer, based in Ukraine</h2>
+
+      <a href="#" class="btn btn-branding"> Get started</a>
     </div>
   </body>
 </html>
