--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       Featured Project which my best projects be choice to show
     </p>
 
-    <div class="container">
+    <div class="container text-center">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img src="/img/yogurt.png" class="img-fluid" />
