--- a/about.html
+++ b/about.html
@@ -28,6 +28,19 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="m-3">
+      <nav class="d-flex justify-content-between">
+        <img src="/img/lbig-ogo.png" class="d-none d-sm-block big-logo" />
+        <img src="/img/mini-logo.jpeg" class="mini-logo d-block d-sm-none" />
+        <ul>
+          <li class="active"><a href="/index.html">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="about-section container">
       <div class="row">
         <div class="col-lg-6">
