--- a/index.html
+++ b/index.html
@@ -28,10 +28,23 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="m-3">
+      <nav class="d-flex justify-content-between">
+        <img src="/img/lbig-ogo.png" class="d-none d-sm-block big-logo" />
+        <img src="/img/mini-logo.jpeg" class="mini-logo d-block d-sm-none" />
+        <ul>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p>Hi! I`m</p>
       <h1>Mariia Yaroshenko</h1>
-      <h2 class="mb-5">Front-end developer, based in Ukraine</h2>
+      <h2 class="m-5">Front-end developer, based in Ukraine</h2>
 
       <a href="#" class="btn btn-branding"> Get started</a>
     </div>
