--- a/work.html
+++ b/work.html
@@ -28,12 +28,25 @@
     <title>Work</title>
   </head>
   <body>
+    <div class="m-3">
+      <nav class="d-flex justify-content-between">
+        <img src="/img/lbig-ogo.png" class="d-none d-sm-block big-logo" />
+        <img src="/img/mini-logo.jpeg" class="mini-logo d-block d-sm-none" />
+        <ul>
+          <li class="active"><a href="/index.html">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="content">
         <h1>Take a look at what I've been working on!</h1>
       </div>
 
-      <div class="row">
+      <div class="row mb-5">
         <div class="col-md-6 mb-5">
           <img src="/img/yogurt.png" class="img-fluid" />
           <h3>Yogurt Project</h3>
@@ -46,7 +59,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row mb-5">
         <div class="col-md-6 mb-5">
           <img src="/img/dictionary-app.png" class="img-fluid" />
           <h3>Dictionary App</h3>
