--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/7899bfea43.js"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -62,5 +62,28 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="m-5 text-center">
+        <a href="mailto:mashayaroshenko92@gmail.com" class="email-link">
+          mashayaroshenko92@gmail.com</a
+        >
+
+        <div class="social-links mt-5">
+          <a href="https://www.instagram.com/ma_ya92/" target="_blank">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://github.com/ma-ya92/" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://ua.linkedin.com/in/mariia-yaroshenko-0a674777"
+            target="_blank"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
