--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/7899bfea43.js"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -41,12 +41,28 @@
       </nav>
     </div>
 
-    <div class="content text-center">
-      <h1 class="mb-5">Let get in touch!</h1>
-      <h3>@mail</h3>
-      <p>mashayaroshenko92@gmail.com</p>
-      <h3>Instagram</h3>
-      <p>ma_ya92</p>
-    </div>
+    <footer>
+      <div class="m-5 text-center">
+        <h1 class="mb-5">Let get in touch!</h1>
+        <a href="mailto:mashayaroshenko92@gmail.com" class="email-link">
+          mashayaroshenko92@gmail.com</a
+        >
+
+        <div class="social-links mt-5">
+          <a href="https://www.instagram.com/ma_ya92/" target="_blank">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://github.com/ma-ya92/" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://ua.linkedin.com/in/mariia-yaroshenko-0a674777"
+            target="_blank"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
