--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/7899bfea43.js"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -107,6 +107,43 @@
           </div>
         </div>
       </div>
-    </div>
+      
+      <footer>
+        <div class="d-none d-lg-block">
+          <div class="contact-box d-flex justify-content-between">
+            <div>
+              <h4>Work Inquiry</h4>
+              <p class="text-muted">
+                Let’s work together and i’ll help you by all my best
+              </p>
+            </div>
+            <div>
+              <div class="btn btn-branding mt-4">Let's talk here</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="m-5 text-center">
+          <a href="mailto:mashayaroshenko92@gmail.com" class="email-link">
+            mashayaroshenko92@gmail.com</a
+          >
+
+          <div class="social-links mt-5">
+            <a href="https://www.instagram.com/ma_ya92/" target="_blank">
+              <i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://github.com/ma-ya92/" target="_blank">
+              <i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              href="https://ua.linkedin.com/in/mariia-yaroshenko-0a674777"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+
+        </div>
+      </footer>
   </body>
 </html>
