Style + my photo

--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="about-section-content">
-            <h1 class="mb-4">Hi! I`m Mariia Yaroshenko</h1>
-            <h2 class="mb-4">Front-end developer, based in Ukraine</h2>
+            <h1 class="mb-4">Hi! 👩 I`m Mariia Yaroshenko</h1>
+            <h2 class="mb-4">🇺🇦 Front-end developer, based in Ukraine</h2>
             <p class="mb-5 text-black-50">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img src="/img/my photo.png" class="img-fluid" />
+          <img src="/img/me.jpg" class="img-fluid rounded" />
         </div>
       </div>
     </div>
@@ -73,7 +73,10 @@
           <a href="https://www.instagram.com/ma_ya92/" target="_blank">
             <i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://github.com/ma-ya92/" target="_blank">
+          <a
+            href="https://github.com/ma-ya92/ma_ya_s_portfolio_2022"
+            target="_blank"
+          >
             <i class="fa-brands fa-github"></i
           ></a>
           <a
