--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,10 @@
           <a href="https://www.instagram.com/ma_ya92/" target="_blank">
             <i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://github.com/ma-ya92/" target="_blank">
+          <a
+            href="https://github.com/ma-ya92/ma_ya_s_portfolio_2022"
+            target="_blank"
+          >
             <i class="fa-brands fa-github"></i
           ></a>
           <a
