--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </div>
 
     <div class="hero">
-      <p>Hi! I`m</p>
-      <h1>Mariia Yaroshenko</h1>
-      <h2 class="m-5">Front-end developer, based in Ukraine</h2>
+      <p>Hi! I`m 👩</p>
+      <h1>Mariia Yaroshenko </h1>
+      <h2 class="m-5">🇺🇦 Front-end developer, based in Ukraine</h2>
 
       <a href="#" class="btn btn-branding"> Get started</a>
     </div>
@@ -132,7 +132,7 @@
             <a href="https://www.instagram.com/ma_ya92/" target="_blank">
               <i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://github.com/ma-ya92/" target="_blank">
+            <a href="https://github.com/ma-ya92/ma_ya_s_portfolio_2022" target="_blank">
               <i class="fa-brands fa-github"></i
             ></a>
             <a
